--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,3 +13,10 @@
   display: flex;
   justify-content: center;
 }
+
+.footerLink {
+  text-decoration:  none;
+  padding-left: 3px;
+  color: white;
+  font-size: 14px;
+}
