--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,16 @@
   justify-content: center;
 }
 
+.navbarLink, .cardLink {
+  text-decoration: none;
+  color: black;
+}
+
+.buttonLink {
+  text-decoration: none;
+  color: white;
+}
+
 .footerLink {
   text-decoration:  none;
   padding-left: 3px;
